@@ -10,7 +10,7 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 top_filename("t/t_psl_basic.v");
 
 compile (
-	 verilator_flags2 => ['--psl --sp --coverage-user'],
+	 verilator_flags2 => ['--psl-deprecated --sp --coverage-user'],
 	 );
 
 execute (
